--- a/index.html
+++ b/index.html
@@ -25,21 +25,20 @@
                         <input type="number" name="year" id="year" placeholder="YYYY">
                     </div>
                 </div>
-                <input type="submit" value="test">
+                <button type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
+                </button>
             </form>
         </div>
         <div class="results">
             <div class="result">
-                <span class="yearsResult"></span>
-                <h1>years</h1>
+                <h1><span class="yearsResult">- -</span> years</h1>
             </div>
             <div class="result">
-                <span class="monthsResult"></span>
-                <h1>months</h1>
+                <h1><span class="monthsResult">- -</span> months</h1>
             </div>
             <div class="result">
-                <span class="daysResult"></span>
-                <h1>days</h1>
+                <h1><span class="daysResult">- -</span> days</h1>
             </div>
         </div>
     </div>
