--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 <body>
     <div class="card">
         <div class="form">
-            <form action="#">
+            <form action="#" novalidate="novalidate">
                 <div class="inputs">
                     <div class="input">
-                        <label for="day">Day</label>
+                        <label for="day" id="dayLabel">Day</label>
                         <input type="number" name="day" id="day" placeholder="DD">
+                        <span class="required" id="day">This field is required</span>
+                        <span class="invalid" id="day">Must be a valid day</span>
                     </div>
                     <div class="input">
-                        <label for="month">Month</label>
+                        <label for="month" id="monthLabel">Month</label>
                         <input type="number" name="month" id="month" placeholder="MM">
+                        <span class="required" id="month">This field is required</span>
+                        <span class="invalid" id="month">Must be a valid month</span>
                     </div>
                     <div class="input">
-                        <label for="year">Year</label>
+                        <label for="year" id="yearLabel">Year</label>
                         <input type="number" name="year" id="year" placeholder="YYYY">
+                        <span class="required" id="year">This field is required</span>
+                        <span class="invalid" id="year">Must be in the past</span>
                     </div>
                 </div>
-                <button type="submit">
+                <button type="submit" class="submitButton">
                     <svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
                 </button>
             </form>
@@ -42,5 +48,6 @@
             </div>
         </div>
     </div>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
