date validation level 2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                         <input type="number" name="day" id="day" placeholder="DD">
                         <span class="required" id="day">This field is required</span>
                         <span class="invalid" id="day">Must be a valid day</span>
+                        <span class="invalidDate" id="day">Must be a valid date</span>
+                        <span class="futureDate" id="day">Must be in the past</span>
                     </div>
                     <div class="input">
                         <label for="month" id="monthLabel">Month</label>
